@@ -673,3 +673,10 @@ void SDLHardwareRenderDevice::setFullscreen(bool enable_fullscreen) {
 		windowResize();
 	}
 }
+
+unsigned short SDLHardwareRenderDevice::getRefreshRate() {
+	SDL_DisplayMode mode;
+	SDL_GetCurrentDisplayMode(0, &mode);
+	return static_cast<unsigned short>(mode.refresh_rate);
+}
+
